bugfix data; form__element alignment

--- a/src/@koop-components/form-components/_forms.scss
+++ b/src/@koop-components/form-components/_forms.scss
@@ -298,6 +298,8 @@ select {
 
   &--pagesearch {
     margin: 0;
+    float: none;
+    width: auto;
 
     input[type="text"],
     button.button {
